--- a/app/templates/voting.html
+++ b/app/templates/voting.html
@@ -9,9 +9,11 @@
 <div class="booking-container">
 	<div class="page-title-row">
 		<h1><i class="fas fa-vote-yea"></i> Voting Form</h1>
+		{% if is_admin_view %}
 		<a href="{{ url_for('voting_bp.voting_nps') }}" class="icon-btn trend-btn" title="NPS Trend">
 			<i class="fas fa-chart-line"></i>
 		</a>
+		{% endif %}
 	</div>
 	<div class="booking-filter-container">
 		{{ render_meeting_filter(upcoming_meetings|sort(attribute=0, reverse=True), selected_meeting_number, label=None,
