--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -266,7 +266,7 @@
         <th class="sortable col-name" data-column-index="0" data-sort-type="string">Name</th>
         <th class="sortable col-part" data-column-index="1" data-sort-type="string">
           Participation
-          <i class="fas fa-info-circle info-icon" title="Qualification criteria: 4+ Roles, 1+ Best TT, 2+ Other Roles (within term)"></i>
+          <i class="fas fa-info-circle info-icon" title="Qualification criteria: 4+ Topic Speeches, 1+ Best TT Award, 2+ Other Roles (Lifetime, Guests only)"></i>
         </th>
         <th class="sortable col-phone" data-column-index="2" data-sort-type="string">Phone</th>
         <th class="sortable col-date" data-column-index="3" data-sort-type="date">Date Created</th>
