update excomm settings to accept past members

--- a/app/static/css/components/autocomplete.css
+++ b/app/static/css/components/autocomplete.css
@@ -21,7 +21,8 @@
     background-color: #f0f0f0;
 }
 
-.autocomplete-suggestion.selected {
+.autocomplete-suggestion.selected,
+.autocomplete-suggestion.autocomplete-active {
     background-color: #007bff;
     color: #fff;
 }
